<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hive_table</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xogns2079@gmail.com">ryu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--추가로 만든 ROS package들 이어서 기재-->
  <exec_depend>table_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
